@@ -972,6 +972,8 @@ $lang['help_systeminformation'] = "The information displayed below is collected 
 $lang['hidefrommenu'] = "Hide From Menu";
 $lang['hide_help_links'] = "Hide module help links";
 $lang['hide_help_links_help'] = "Disable the module help link in page headers.";
+$lang['help_page_default'] = 'Check this checkbox to set this page as the default page';
+$lang['help_title_page_default'] = 'Default content page';
 $lang['help_page_wantschildren'] = 'Specifies whether this page accepts child pages.  If disabled, no new page can be created as a child of this page, and you cannot re-order pages to set them as a child of this page.';
 $lang['help_title_content_accesskey'] = 'Access key field';
 $lang['help_title_content_active'] = 'Active toggle';
@@ -1386,6 +1388,7 @@ $lang['preview'] = "Preview";
 $lang['previewdescription'] = "Preview changes";
 $lang['previous'] = "Previous";
 $lang['profile'] = "Profile";
+$lang['prompt_defaultcontent'] = 'This page is the default content page';
 $lang['prompt_smarty_cachemodules'] = "Cache module calls";
 $lang['prompt_smarty_cacheudt'] = "Cache UDT Calls";
 $lang['prompt_smarty_compilecheck'] = "Do a Compilation Check";
